[package]
name = "miniquad-websockets"
version = "0.1.0"
authors = ["Michael Birtwell <michael.birtwell@starleaf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "^0.2.0"
miniquad = { path = "../miniquad" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = "^0.2", features = ["rt-core", "tcp", "stream", "sync", "macros"] }
tokio-tungstenite = "^0.11.0"
futures-util = "*"
